# conan-portaudio

./: .gitignore  .travis.yml  FindPortaudio.cmake  README.md  appveyor.yml  build.py  conanfile.py  release_version.py
test/: CMakeLists.txt  conanfile.py  main.c  pa_devs.c
test_package/: CMakeLists.txt  conanfile.py  main.c
